Added GC logging.